--- a/config/database.yml
+++ b/config/database.yml
@@ -11,21 +11,14 @@ default: &default
 
 development:
   <<: *default
-  database: quick_start_web_db/development
-  username: louie
-  password: root
-
+  database: db/development
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: quick_start_web_db/test
-  username: louie
-  password: root
+  database: db/test
 
 production:
   <<: *default
-  database: quick_start_web_db/production
-  username: louie
-  password: root
+  database: db/production
