--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,9 @@
 user_squall:
   email: squall@example.com
   person: squall_lionheart
+
+google_auth:
+  provider: 'provider'
+  uid: '1000000000'
+  email: 'cloud@example.com'
+  
